# sublime-buildifier

./: .gitattributes  .gitignore  Bazel.sublime-syntax  Buildifier.py  Buildifier.sublime-settings  Default.sublime-commands  Main.sublime-menu  README.md  buildifier_core.py  package-metadata.json  pyproject.toml
.github/workflows/: tests.yml
tests/: test_buildifier_core.py  test_buildifier_integration.py
tests/fixtures/: lint_output_empty.json  lint_output_invalid.json  lint_output_mixed.json  lint_output_not_formatted.json  lint_output_syntax_error.json  lint_output_warnings.json
