[project]
name = "sublime-buildifier"
version = "1.0.0"
description = "Sublime Text plugin for formatting Bazel files with buildifier"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["buildifier_core"]
omit = ["tests/*"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
